# opensim-creator

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Changelog.txt  DEV_osmv.toml.in  GetDependencies.cmake  INSTALL_osmv.toml  Info.plist  LICENSE  Makefile  Makefile.arm64  Makefile.rule  Makefile.system  NOTICE.txt  OSMV_GetDependencies.cmake  README.md  RELEASE_CHECKLIST.md  RELEASING.md  c_check  codemeta.json  common.h  imgui.cpp  make_single_header.py  param.h  postinst.in  postrm.in  settings.vs.json
apps/hellotriangle/: CMakeLists.txt  hellotriangle.cpp
apps/osc/: CMakeLists.txt  osc.cpp  osc_dev_config.toml.in  osc_installed_config.toml.in
benches/: BenchOpenSimRenderer.cpp  CMakeLists.txt
benches/BenchOpenSimCreator/: BenchOpenSimHelpers.cpp  BenchOpenSimRenderer.cpp  CMakeLists.txt
benches/OpenSimBindings/: BenchOpenSimHelpers.cpp  BenchOpenSimRenderer.cpp
benches/OpenSimCreator/: BenchOpenSimHelpers.cpp  BenchOpenSimRenderer.cpp
docs/: CMakeLists.txt  README.md  install.md  pyproject.toml  requirements.txt  requirements.txt.txt
docs/source/: building-from-source.rst  chal1.rst  clion-development-environment-setup.rst  conf.py  contributing-to-development.rst  contributing-to-simbody-and-opensim.rst  contributing.rst  development-environment.rst  doc_meshimporterwizard.rst  esmac-2025.rst  index.rst  installation.rst  make-a-bouncing-block.rst  make-a-knee.rst  make-a-leg.rst  make-a-lower-leg.rst  make-a-pendulum.rst  make-an-arm.rst  preview-experimental-data.rst  setup-development-environment.rst  station-defined-frames.rst  the-mesh-importer-advanced.rst  the-mesh-importer.rst  the-mesh-warper.rst  the-model-warper.rst  the-release-process.rst  tut1.rst  tut2.rst  tut3.rst  tut4.rst  tut5.rst  tut6.rst  tut7.rst  tut8.rst  use-the-mesh-importer.rst  use-the-mesh-warper.rst  use-the-model-warper.rst  visual-studio-development-environment-setup.rst
hellooscar/: CMakeLists.txt  README.md  hellooscar.cpp
hellooscar/Emscripten/: Packaging.cmake  hellooscar.html
libOpenSimCreator/: CMakeLists.txt  README.md
libOpenSimCreator/ComponentRegistry/: ComponentRegistry.h  ComponentRegistryBase.h  ComponentRegistryEntry.h  ComponentRegistryEntryBase.cpp  ComponentRegistryEntryBase.h  StaticComponentRegistries.cpp  StaticComponentRegistries.tests.cpp
libOpenSimCreator/Graphics/: CachedModelRenderer.cpp  CachedModelRenderer.h  ComponentAbsPathDecorationTagger.cpp  ComponentAbsPathDecorationTagger.h  ComponentSceneDecorationFlagsTagger.cpp  CustomRenderingOptionFlags.h  CustomRenderingOptions.cpp  CustomRenderingOptions.h  ModelRendererParams.cpp  ModelRendererParams.h  MuscleColorSourceScaling.cpp  MuscleColorSourceScaling.h  MuscleColorSourceScaling.tests.cpp  OpenSimDecorationGenerator.cpp  OpenSimDecorationGenerator.h  OpenSimDecorationGenerator.tests.cpp  OpenSimDecorationOptionFlags.cpp  OpenSimDecorationOptionFlags.h  OpenSimDecorationOptions.h  OpenSimGraphicsHelpers.cpp  OpenSimGraphicsHelpers.h  OverlayDecorationGenerator.cpp  OverlayDecorationOptions.h  SimTKDecorationGenerator.cpp  SimTKDecorationGenerator.tests.cpp  SimTKMeshLoader.cpp
libOpenSimCreator/Platform/: OSCColors.h  OpenSimCreatorApp.cpp  RecentFiles.cpp  RecentFiles.h  (+1 more)
libopensimcreator/: CMakeLists.txt  README.md  opensimcreatorConfig.cmake.in
libopynsim/: CMakeLists.txt  init.cpp  init.h  opynsimConfig.cmake.in  opynsimconfig.h.in  osim.cpp  osim.h
liboscar/: CMakeLists.txt  Concepts.h  DOM.h  Formats.h  Formats.tests.cpp  Graphics.h  Graphics.tests.cpp  Maths.h  Maths.tests.cpp  Platform.h  Platform.tests.cpp  README.md  Shims.h  Shims.tests.cpp  UI.h  UI.tests.cpp  Utils.h  Utils.tests.cpp  Variant.h  Variant.tests.cpp  oscar.h  oscar.tests.cpp  oscarconfig.h.in
liboscar-demos/: CMakeLists.txt  CookiecutterScreen.cpp  CookiecutterScreen.h  CustomWidgetsTab.cpp  DrawingTestTab.cpp  DrawingTestTab.h  FrustumCullingTab.cpp  FrustumCullingTab.h  HittestTab.cpp  HittestTab.h  ImGuiDemoTab.cpp  ImGuiDemoTab.h  ImGuizmoDemoTab.cpp  ImPlotDemoTab.cpp  ImPlotDemoTab.h  MandelbrotTab.cpp  MandelbrotTab.h  MeshGenTestTab.cpp  MeshGenTestTab.h  OscarDemoTabs.h  OscarDemosTabRegistry.cpp  OscarDemosTabRegistry.tests.cpp  SubMeshTab.cpp  SubMeshTab.h
libosim/: CMakeLists.txt  README.md  opensim-core.version  osim.cpp  osim.h  osimConfig.cmake.in
opensimcreator/: CMakeLists.txt  README.md  pyproject.toml
opynsim/: CMakeLists.txt  METADATA.in  PackageWheel.cmake  README.md  exports.txt  opynsim_debugger.cpp.in  pyproject.toml
osc/: CMakeLists.txt  Info.plist.in  README.md  osc.cpp  osc.toml.in  osc_config.h.in  osc_dev_config.toml.in  osc_installed_config.toml.in  resources.rc
packaging/: CMakeLists.txt  CPackOptions.cmake  PackageWheel.cmake  README.md  check_wheel_contents.py
src/: 3d_common.cpp  3d_common.hpp  App.cpp  App.hpp  Assertions.cpp  Assertions.hpp  CMakeLists.txt  Config.cpp  Config.hpp  Log.cpp  Log.hpp  MainEditorState.cpp  MainEditorState.hpp  MainUIStateAPI.hpp  MeshCache.cpp  MeshCache.hpp  README.md  RecentFile.hpp  Screen.hpp  Styling.hpp  ak_common-shaders.hpp  algs.hpp  app.cpp  app.hpp  application.cpp  application.hpp  assertions.cpp  assertions.hpp  cfg.cpp  cfg.hpp  config.cpp  config.hpp  constants.hpp  error_screen.cpp  error_screen.hpp  fd_simulation.cpp  fd_simulation.hpp  gl.cpp  gl.hpp  gl_extensions.cpp  (+60 more)
src/3D/: BVH.cpp  (+23 more)
tests/: CMakeLists.txt  OscTests.cpp  README.md  TestAlgorithms.cpp  TestBVH.cpp  TestCSV.cpp  TestDedupedString.cpp  TestForwardDynamicSimulation.cpp  TestImage.cpp  TestOpenSim.cpp  TestOpenSimActions.cpp  TestOpenSimHelpers.cpp  TestOsc.cpp  TestRenderer.cpp  TestRendererHelloTriangleScreen.cpp  TestTypeRegistry.cpp  foo_customizations.hpp  offload_utils.hpp  osc_test_config.hpp.in  test_extents.cpp  test_layout_ctors.cpp  test_layout_padded_left.cpp  test_layout_padded_right.cpp  test_macros.cpp  test_mdarray_ctors.cpp  test_mdspan_ctors.cpp  test_mdspan_size.cpp  test_mdspan_swap.cpp  test_submdspan.cpp  test_submdspan_static_slice.cpp
(+7033 files in other folders)
